fix signup form overflow

--- a/client/src/Pages/Registration page/components/signup.module.css
+++ b/client/src/Pages/Registration page/components/signup.module.css
@@ -121,6 +121,17 @@
    width: 40%;
    height: 100%;
    padding: 0 1.5rem;
+   overflow-y: scroll;
+}
+/* Hide scrollbar for Chrome, Safari and Opera */
+.rightRegion::-webkit-scrollbar {
+display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.rightRegion {
+-ms-overflow-style: none;  /* IE and Edge */
+scrollbar-width: none;  /* Firefox */
 }
 .error {
    height: 2rem;
@@ -518,6 +529,7 @@
    .rightRegion {
       padding: 0 0;
    }
+
 
    .error {
       height: 2rem;
